2006-11-02       Gaius Mulley <gaius@gnu.org>

	* gm2/lang-specs.h:  use the gm2 rather than gcc driver.
	* gm2/gm2-compiler/gm2lcc.mod:  also use gm2 rather
	  than gcc.
	* gm2/gm2-compiler/gm2lcc.mod:  corrected extern
	  declaration of exit.

2006-10-20       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  fixed building of constants strings.
	  Constants are also placed into the global scope so
	  that they are not garbage collected.
	* gm2/M2GenGCC.mod:  CodeXIndr handle special case of
	  null string.
	* gm2/Make-lang.in:  add automatically generated modules
	  to the verify12 rule.
	* added a string assignment regression test.

2006-10-19       Gaius Mulley <gaius@gnu.org>

	* www/index.ms:  updated gm2-harness release to 0.96.
	* gm2/gm2-compiler/SymbolConversion.mod:   Poison must
	  not check for gcc poisoning as it is called after a
	  function has been emitted and potentially poisoned.

2006-10-18       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-config.in:  added.
	* gm2/Make-lang.in:  include gm2/gm2-config.
	* gm2/configure.in:  generate gm2/gm2-config.
	* backed out above changes

2006-10-17       Gaius Mulley <gaius@gnu.org>

	* gm2/aclocal.m4:  added.
	* gm2/configure:  rebuilt.

2006-10-14       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  minor fixes to build manual pages.

2006-10-13       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  call gimplify_function on all
          functions.
	* gm2/Make-lang.in:  added ability to optionally build
	  the ulm libraries which matches gm2-harness-0.94.

2006-10-12       Gaius Mulley <gaius@gnu.org>

	* gm2/patches/gcc/4.1.1/01.gaius_patch_gcc: added.

2006-10-07       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm.2c:  fixed conditional goto expressions.

2006-10-04       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm.2c:  added debugging stub.

2006-10--03       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  fixed BuildEnd
	  to use IsProcedureGccNested in CodeKillLocalVar.